--- a/pom.xml
+++ b/pom.xml
@@ -69,4 +69,13 @@
           <scope>provided</scope>
       </dependency>
   </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/GoldfishJonny/RevivalProject</url>
+        </repository>
+    </distributionManagement>
+
 </project>
