--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,15 @@
 
   <groupId>org.BlackTeaSea</groupId>
   <artifactId>Revival</artifactId>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Revival</name>
 
   <properties>
     <java.version>17</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
-
 
   <build>
     <plugins>
@@ -77,5 +76,4 @@
             <url>https://maven.pkg.github.com/GoldfishJonny/RevivalProject</url>
         </repository>
     </distributionManagement>
-
 </project>
