--- a/pom.xml
+++ b/pom.xml
@@ -69,11 +69,22 @@
       </dependency>
   </dependencies>
 
-    <distributionManagement>
-        <repository>
+    <profiles>
+        <profile>
             <id>github</id>
-            <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/GoldfishJonny/RevivalProject</url>
-        </repository>
-    </distributionManagement>
+            <activation>
+                <property>
+                    <name>useGitHubPackages</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <distributionManagement>
+                <repository>
+                    <id>github</id>
+                    <name>GitHub Packages</name>
+                    <url>https://maven.pkg.github.com/BlackTeaSea/RevivalProject</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+    </profiles>
 </project>
