--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
           <version>1.20.4-R0.1-SNAPSHOT</version>
           <scope>provided</scope>
       </dependency>
+      <dependency>
+          <groupId>org.yaml</groupId>
+          <artifactId>snakeyaml</artifactId>
+          <version>2.2</version>
+      </dependency>
   </dependencies>
 
     <profiles>
